# eval42

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eval42-development-plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: adapters.md  architecture.md  compatibility-decisions.md  configuration.md  implementation-evidence.md  quick-start.md  release-readiness.md
docs/phase-0/: acceptance.md  groundedseek-dataset-audit.md  license-and-data-governance.md  repository-audit.md
examples/: README.md
examples/groundedseek/: eval.yml
examples/mock-research/: dataset.jsonl  eval.yml  responses.json
examples/mock-shopping/: dataset.jsonl  eval.yml  responses.json
examples/phase0/: baseline.json  case-result.json  config.json  dataset-case.json  report.json
examples/phonemall/: eval.yml
schemas/: README.md
schemas/v1/: baseline.schema.json  case-result.schema.json  config.schema.json  dataset-case.schema.json  report.schema.json
scripts/: validate_phase0.py  validate_plan.py  validate_publish.py  validate_release.py
src/eval42/: __init__.py  _version.py  baseline.py  cli.py  config.py  errors.py  gates.py  loader.py  mapping.py  metrics.py  models.py  reporters.py  runner.py  schema.py  util.py
src/eval42/_schemas/: __init__.py
src/eval42/_schemas/v1/: __init__.py
src/eval42/adapters/: __init__.py  base.py  http.py
tests/: __init__.py  conftest.py  test_baseline_reporter.py  test_config_loader.py  test_gates.py  test_http_adapter.py  test_loader_mapping.py  test_metrics.py  test_runner_cli.py  test_validate_publish.py
